Changelog
=========

2.6.2 (unreleased)
------------------

- Fix breaking dexterity by checking on portal_type instead of meta_type.
  [WouterVH]

- When a subscriber is created via addSubscriber, set language same as newsletter.
  (merged from branch-bpi-rouet-2011-9)
  [regisrouet, WouterVH]

- When importing, set subscriber language same as newsletter.
  (merged from branch-bpi-rouet-2011-9)
  [regisrouet, WouterVH]

- Fix unicode characters in title of issue.
  (merged from branch-unicodefix)
  [mircoangelini, WouterVH]

- i18n for the uploaded/downloaded CSV-file.
  [WouterVH]

- Fix Plone3-compatibility when sending MIMEMultipart-messages.
  [WouterVH]

- A regular Editor can now edit and refresh drafts, without needing
  full Manager-permissions.
  [WouterVH]

- Fix unicode decode error when sending newsletter issues with special
  characters in the title.
  [timo]

- Update Brazilian Portuguese translation
  [ericof]


2.6.1 (2011-11-23)
------------------

- Fix mail rendering in Thunderbird 8.
  [timo]

- Fix German translation for registration notification.
  [timo]

- Use test instead of tests in extras_require to comply with Plone standards.
  [timo]

- Remove test_enl.py tests since it does not test anything that is not covered
  by test_setup.py.
  [timo]


2.6 (2011-10-01)
----------------

- Fix external images url by inserting url directly in html when 'http' is
  encountered. This fixes http://plone.org/products/easynewsletter/issues/15
  [numahel]

- loadContent only when AcquireCriteria is set True.
  Do not override the text when it's False.
  This fixes http://plone.org/products/easynewsletter/issues/4
  [WouterVH]

- Rename "refresh" into "Refresh aggregate body" to make more clear what it
  does. Cfr. http://plone.org/products/easynewsletter/issues/4
  [WouterVH]

- Improve translatable content.
  [wimbou]

- Fix ENLIssue to avoid issue to be sent twice to same recipient.
  [numahell]

- Add Brazilian translation.
  [davilima6]
