@@ -1,7 +1,7 @@
 [buildout]
 extends = 
-#   test-plone-4.0.x.cfg
-    test-plone-3.3.x.cfg
+    test-plone-4.0.x.cfg
+#   test-plone-3.3.x.cfg
 
 
 parts += 
