@@ -4,6 +4,11 @@ Changelog
 2.6.2 (unreleased)
 ------------------
 
+- Fix non-ASCII chars in headers. This fixes
+  http://plone.org/products/easynewsletter/issues/17 and
+  http://plone.org/products/easynewsletter/issues/19
+  [regisrouet, WouterVH]
+
 - Fix breaking dexterity by checking on portal_type instead of meta_type.
   [WouterVH]
 
